# le-promesse-lezioni

./: .gitignore  AGENTS.md  ATTRIBUTION.md  LICENSE  LINGQ_API_NOTES.md  README.md  TODO.org  USAGE.md  build_site.py  check_epubs.py  index.html  justfile  pyproject.toml  split_chapters.py
lesson-material/: README.md  pyproject.toml  split_chapters.py
lesson-material/promessi_lessons/: audio.py  cli.py  prepare_source.py  xml.py
promessi_lessons/: __init__.py  cli.py  extract.py  model.py  paths.py  render.py  source.py  transforms.py  xml.py
website/: README.md  pyproject.toml  site.css
website/promessi_site/: __init__.py  build.py
website/promessi_site/resources/templates/: artifact_link_live.html  artifact_link_planned.html  chapter_block.html  lesson_row.html  overview_card.html  page.html  surface_card.html  upstream_card.html  warning_note.html
