[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "promessi-lessons"
version = "0.1.0"
description = "Split the LingQ study text into per-lesson HTML, TXT, or EPUB exports."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "B. Grace" },
]
dependencies = []

[project.scripts]
promessi-split-chapters = "promessi_lessons.cli:main"
promessi-prepare-source = "promessi_lessons.prepare_source:main"
promessi-check-epubs = "promessi_lessons.check_epubs:main"

[tool.setuptools]
packages = ["promessi_lessons"]
